# CoaxCapture-CCG3-8M

./: .gitignore  README.md  Readme
bash/: common_fun.sh  detect.sh  load_modules.sh  pcie_get_info.sh  pcie_init_card0.sh  pcie_init_card1.sh  watchdog_arm.sh
raw_v4l2_viewer/v4l2_viewer/pcie-hal/: CMakeLists.txt  README.md  checktime.py
raw_v4l2_viewer/v4l2_viewer/pcie-hal/include/: CameraGather.h  PcieCamera.h  camera.h  camera_adapter.h  camera_common.h  device_manager.h  hal_camera.h  pcie_camera.h  yuvtojpeg.h
raw_v4l2_viewer/v4l2_viewer/pcie-hal/src/: PcieCamera.cpp  camera.cpp  device_manager.cpp  hal_camera.cpp  main.cpp  pcie_camera.cpp  simplest_ffmpeg_video_encoder_pure.cpp  watermark.cpp  yuvtobgr.cpp  yuvtojpeg.cpp
raw_v4l2_viewer/v4l2_viewer/pcie-hal/testUi/: Makefile  OpenGLDisplay.cpp  TestWidget.cpp  TestWidget.h  TestWidget.ui  TestYUVRenderer.pro  TestYUVRenderer.pro.user.701a63b  main.cpp  moc_TestWidget.cpp  ui_TestWidget.h
raw_v4l2_viewer/v4l2_viewer/pcie_release/: readme.txt
raw_v4l2_viewer/v4l2_viewer/pcie_release/include/: camera_common.h  encoder_cuda.h  pcie_camera.h  watermark.h  yuvtobgr.h
raw_v4l2_viewer/v4l2_viewer/pcie_release/ko/: load_driver.sh
raw_v4l2_viewer/v4l2_viewer/pcie_release/ko/rules.d/: 52-xilinx-ftdi-usb.rules
raw_v4l2_viewer/v4l2_viewer/pcie_release/sample/: CMakeLists.txt  fun.cpp  fun.h  kill_view.sh  view.cpp  view.h
raw_v4l2_viewer/v4l2_viewer/pcie_release/sample/test/: player.cpp  test.cpp
tools/pcie_a53_rw/: arm_pcie_protocol.c  element_process.c  element_process.h  link_margin.c  main.c  serdes_data.c  serdes_data_raw.c
tools/pcie_zu_tools/: pcie_zu-update.sh
xdma_v4l2/: cdev_ctrl.c  cdev_sgdma.c  libxdma.c  xdma_mod.c  xdma_video.c
